Remove paramterized tests